--- a/SaleCountDown/package.json
+++ b/SaleCountDown/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
+    "date-fns": "^2.30.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
