--- a/Dashboard/package.json
+++ b/Dashboard/package.json
@@ -17,7 +17,8 @@
     "@swc/helpers": "^0.2.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.4",
+    "react-router": "^6.16.0",
+    "react-router-dom": "^6.16.0",
     "recharts": "^2.8.0",
     "regenerator-runtime": "^0.13.9"
   },
